--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             s exercitationem est neque autem harum cupiditate.</p>
         <div class="social-icons">
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/Obasco-max" target="_blank"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <a href="#" class="btn">Hire Me</a>
+        <a href="https://wa.me/2349038316994" class="btn" target="_blank" >Hire Me</a>
         </div>
 
     </section>   
