--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <a href="https://wa.me/2349038316994" class="btn" target="_blank" >Hire Me</a>
+        <a href="https://wa.me/2349038316994?text=Hey Welcom how can i help you " class="btn" target="_blank" >Hire Me</a>
         </div>
 
     </section>   
